Fix horizontal scroll on app details page

--- a/app/sass/appdetails.scss
+++ b/app/sass/appdetails.scss
@@ -1,3 +1,5 @@
+@import "~bootstrap-sass/assets/stylesheets/bootstrap/_variables.scss";
+
 .app-details {
     h3 {
         text-transform: uppercase;
@@ -12,5 +14,11 @@
     
     section {
         padding-bottom: 16px;
+    }
+    
+    @media screen and (max-width:$screen-md-max) {
+       .overview-title {
+           background: red;
+       }
     }
 }
